k8s-apps-deployment/k8s-spec-result/result-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: result
  name: result
  namespace: vote
spec:
  replicas: 1
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      containers:
      - image: docker.io/hutinskit/result
        name: result
        ports:
        - containerPort: 4000
          name: result
