k8s-apps-deployment/k8s-spec-result/result-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: result
  name: result
  namespace: vote
spec:
  type: LoadBalancer
  ports:
  - name: "result-service"
    port: 5001
    targetPort: 80
    #nodePort: 31001
  selector:
    app: result
