k8s-apps-deployment/k8s-spec-result/result-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: result-test-ingress
  namespace: vote
  labels:
    app: result
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: "tino-result-test.tinotest.com"  
    http:
      paths:
      - pathType: Prefix
        path: /      
        backend:
          service: 
            name: result
            port:
              number: 4000
